--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,36 @@
+h1 {
+    text-align: center;
+    color: blue;
+    
+    border: 1px solid black;
+    border-top-left-radius: .4em;
+    border-top-right-radius: .4em;
+    border-bottom-left-radius: .4em;
+    border-bottom-right-radius: .4em;
+
+    margin: .3em;
+
+    background-color: lightsteelblue;
+}
+
 .list {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly; 
-    flex: auto;
     flex-flow: row wrap;
-    background-color: white;
+    justify-content: space-around;
+    background-color: lightcyan;
 }
 
 .shop {
-    display: flex;
-    width: 30%;
+    flex: 0 0 30%;
+
     border: 1px solid black;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    padding: 10px;
-    margin: 5px;
+    border-top-left-radius: .3em;
+    border-top-right-radius: .5em;
+    border-bottom-left-radius: .5em;
+    border-bottom-right-radius: .3em;
+
+    padding: .3em;
+    margin: .3em;
+
     background-color: lightsteelblue;
 }
